@@ -24,23 +24,23 @@
  * Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  * 02110-1301, USA.
  *
- * Linking this library statically or dynamically with other modules 
- * is making a combined work based on this library. Thus, the terms 
- * and conditions of the GNU General Public License cover the whole 
+ * Linking this library statically or dynamically with other modules
+ * is making a combined work based on this library. Thus, the terms
+ * and conditions of the GNU General Public License cover the whole
  * combination.
- * 
- * As a special exception, the copyright holders of this library give you 
- * permission to link this library with independent modules to produce 
- * an executable, regardless of the license terms of these independent 
- * modules, and to copy and distribute the resulting executable under terms 
- * of your choice, provided that you also meet, for each linked independent 
- * module, the terms and conditions of the license of that module. 
- * An independent module is a module which is not derived from or based 
- * on this library. If you modify this library, you may extend this exception 
- * to your version of the library, but you are not obliged to do so. 
- * If you do not wish to do so, delete this exception statement from your 
+ *
+ * As a special exception, the copyright holders of this library give you
+ * permission to link this library with independent modules to produce
+ * an executable, regardless of the license terms of these independent
+ * modules, and to copy and distribute the resulting executable under terms
+ * of your choice, provided that you also meet, for each linked independent
+ * module, the terms and conditions of the license of that module.
+ * An independent module is a module which is not derived from or based
+ * on this library. If you modify this library, you may extend this exception
+ * to your version of the library, but you are not obliged to do so.
+ * If you do not wish to do so, delete this exception statement from your
  * version.
- * 
+ *
  */
 
 package org.scilab.forge.jlatexmath;
@@ -49,26 +49,33 @@ package org.scilab.forge.jlatexmath;
  * An atom representing a scaled Atom.
  */
 public class ScaleAtom extends Atom {
-    
+
     protected Atom base;
     private double xscl, yscl;
 
     public ScaleAtom(Atom base, double xscl, double yscl) {
-	this.type = base.type;
-	this.base = base;
-	this.xscl = xscl;
-	this.yscl = yscl;
+        this.type = base.type;
+        this.base = base;
+        this.xscl = xscl;
+        this.yscl = yscl;
     }
-    
+
+    public ScaleAtom(Atom base, double scl) {
+        this.type = base.type;
+        this.base = base;
+        this.xscl = scl;
+        this.yscl = scl;
+    }
+
     public int getLeftType() {
-	return base.getLeftType();
+        return base.getLeftType();
     }
-    
+
     public int getRightType() {
-	return base.getRightType();
+        return base.getRightType();
     }
-    
+
     public Box createBox(TeXEnvironment env) {
-	return new ScaleBox(base.createBox(env), xscl, yscl);
-    } 	
+        return new ScaleBox(base.createBox(env), xscl, yscl);
+    }
 }
